--- a/index.html
+++ b/index.html
@@ -9,7 +9,36 @@
   </head>
   <body>
     <div class="wrapper">
-      <div class="content"></div>
+      <div class="content">
+        <div class="output">
+          <div class="expression">1+2+3+4+5+6+7+</div>
+          <div class="current-number">123456789123456789</div>
+        </div>
+        <div class="buttons-wrapper">
+          <button class="clear">C</button>
+          <button class="delete">Del</button>
+          <button class="unary-minus">+/-</button>
+          <button class="number">7</button>
+          <button class="number">8</button>
+          <button class="number">9</button>
+          <button class="myltiply">*</button>
+          <button class="divide">/</button>
+          <button class="number">4</button>
+          <button class="number">5</button>
+          <button class="number">6</button>
+          <button class="minus">-</button>
+          <button class="plus">+</button>
+          <button class="number">1</button>
+          <button class="number">2</button>
+          <button class="number">3</button>
+          <button class="bracket">(</button>
+          <button class="bracket">)</button>
+          <button class="number">0</button>
+          <button class="number">00</button>
+          <button class="point">.</button>
+          <button class="equals">=</button>
+        </div>
+      </div>
     </div>
     <script src="./index.js"></script>
   </body>
