--- a/index.html
+++ b/index.html
@@ -11,32 +11,36 @@
     <div class="wrapper">
       <div class="content">
         <div class="output">
-          <div class="expression">1+2+3+4+5+6+7+</div>
-          <div class="current-number">123456789123456789</div>
+          <div class="expression" id="expression"></div>
+          <div class="current-number" id="current-number">0</div>
         </div>
         <div class="buttons-wrapper">
-          <button class="clear">C</button>
-          <button class="delete">Del</button>
-          <button class="unary-minus">+/-</button>
-          <button class="number">7</button>
-          <button class="number">8</button>
-          <button class="number">9</button>
-          <button class="myltiply">*</button>
-          <button class="divide">/</button>
-          <button class="number">4</button>
-          <button class="number">5</button>
-          <button class="number">6</button>
-          <button class="minus">-</button>
-          <button class="plus">+</button>
-          <button class="number">1</button>
-          <button class="number">2</button>
-          <button class="number">3</button>
-          <button class="bracket">(</button>
-          <button class="bracket">)</button>
-          <button class="number">0</button>
-          <button class="number">00</button>
-          <button class="point">.</button>
-          <button class="equals">=</button>
+          <button class="clear" id="clear">C</button>
+          <button class="delete" id="delete">Del</button>
+          <button class="unary-minus" id="unary-minus">+/-</button>
+
+          <button class="number" id="seven">7</button>
+          <button class="number" id="eight">8</button>
+          <button class="number" id="nine">9</button>
+          <button class="plus" id="plus">+</button>
+          <button class="minus" id="minus">-</button>
+
+          <button class="number" id="four">4</button>
+          <button class="number" id="five">5</button>
+          <button class="number" id="six">6</button>
+          <button class="myltiply" id="multiply">*</button>
+          <button class="divide" id="divide">/</button>
+
+          <button class="number" id="one">1</button>
+          <button class="number" id="two">2</button>
+          <button class="number" id="three">3</button>
+          <button class="bracket" id="open-bracket">(</button>
+          <button class="bracket" id="close-bracket">)</button>
+
+          <button class="number" id="zero">0</button>
+          <button class="number" id="double-zero">00</button>
+          <button class="point" id="point">.</button>
+          <button class="equals" id="equals">=</button>
         </div>
       </div>
     </div>
