feat: add brackets logic

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="content">
         <div class="output">
           <div class="expression" id="expression"></div>
-          <div class="current-number" id="current-number">0</div>
+          <div class="current-number" id="current-number">_</div>
         </div>
         <div class="buttons-wrapper">
           <button class="clear" id="clear">C</button>
